--- a/config/base_config_er.cfg
+++ b/config/base_config_er.cfg
@@ -12,7 +12,7 @@ factory="entity_ruler"
 [initialize.components.entity_ruler]
 [initialize.components.entity_ruler.patterns]
 @readers = "srsly.read_jsonl.v1"
-path = "corpus\entity_ruler_patterns.jsonl
+path = "corpus\rules\entity_ruler_patterns.jsonl
 
 [nlp]
 lang = "en"
